orphanet_nomenclature_binder

--- a/notebooks/6_distribution_of_Orphanet_RD_by_preferential_parent.ipynb
+++ b/notebooks/6_distribution_of_Orphanet_RD_by_preferential_parent.ipynb
@@ -24,12 +24,12 @@
     "    actives_entities_cross = getActivesEntities(xml_data_cross)\n",
     "\n",
     "    ## Select disorders\n",
-    "    disorders_cross = getDisorders(actives_entities_cross)\n",
+    "    disorders_cross, disorders_orphacode = getDisorders(actives_entities_cross)\n",
     "    n_disorders_cross = len(disorders_cross)\n",
     "\n",
     "    ## Get data from the Orphadata linearisation of RD product (product7)\n",
     "    xml_data_linear = getData('../xml/en_product7.xml')\n",
-    "    dict_preferential_parents_entities = getEntitiesWithPreferentialParent(xml_data_linear)\n",
+    "    dict_preferential_parents_entities = getEntitiesWithPreferentialParent(xml_data_linear, disorders_orphacode)\n",
     "    ## Filter disorders with preferential parent\n",
     "    dict_preferential_parents, dict_filtered_preferential_parents = filterDisorderWithPreferentialParent(\n",
     "        disorders_cross, dict_preferential_parents_entities)\n",
@@ -82,15 +82,17 @@
     "    keeping only disorders (with flag 36547)\n",
     "    :param actives_entities:\n",
     "    :return:\n",
-    "    \"\"\"\n",
+    "    \"\"\"\n
     "    disorders = []\n",
+    "    disorders_orphacode = []\n",	
     "    for entity in tqdm(actives_entities):\n",
     "        if entity['DisorderGroup']['@id'] == '36547':\n",
     "            disorders.append(entity)\n",
+    "            disorders_orphacode.append(entity['OrphaCode'])\n",
     "    return disorders\n",
     "\n",
     "\n",
-    "def getEntitiesWithPreferentialParent(xml_data):\n",
+    "def getEntitiesWithPreferentialParent(xml_data, disorders_orphacode):\n",
     "    \"\"\"\n",
     "    Filter entities with a preferential parent\n",
     "    :param xml_data:\n",
@@ -105,15 +107,16 @@
     "                            ]\n",
     "    dict_preferential_parents_entities = {}\n",
     "    for entity in tqdm(xml_data[\"JDBOR\"][\"DisorderList\"][\"Disorder\"]):\n",
-    "        if entity['DisorderDisorderAssociationList']['@count'] != '0':\n",
-    "            DisorderDisorderAssociation = entity['DisorderDisorderAssociationList']['DisorderDisorderAssociation']\n",
-    "            targetDisorderOrphacode = DisorderDisorderAssociation['TargetDisorder']['OrphaCode']\n",
-    "            if DisorderDisorderAssociation['DisorderDisorderAssociationType']['Name']['#text'] == \"Preferential parent\":\n",
-    "                if not targetDisorderOrphacode in notInvolvedClassifId:\n",
-    "                    dict_preferential_parents_entities[entity['OrphaCode']] = {\n",
-    "                        'Preferential parent': DisorderDisorderAssociation['TargetDisorder']['Name']['#text'],\n",
-    "                        'OrphaCode': DisorderDisorderAssociation['TargetDisorder']['OrphaCode']\n",
-    "                        }\n",
+    "        if entity['OrphaCode'] in disorders_orphacode:\n",
+    "            if entity['DisorderDisorderAssociationList']['@count'] != '0':\n",
+    "                DisorderDisorderAssociation = entity['DisorderDisorderAssociationList']['DisorderDisorderAssociation']\n",
+    "                targetDisorderOrphacode = DisorderDisorderAssociation['TargetDisorder']['OrphaCode']\n",
+    "                if DisorderDisorderAssociation['DisorderDisorderAssociationType']['Name']['#text'] == \"Preferential parent\":\n",
+    "                    if not targetDisorderOrphacode in notInvolvedClassifId:\n",
+    "                        dict_preferential_parents_entities[entity['OrphaCode']] = {\n",
+    "                            'Preferential parent': DisorderDisorderAssociation['TargetDisorder']['Name']['#text'],\n",
+    "                            'OrphaCode': DisorderDisorderAssociation['TargetDisorder']['OrphaCode']\n",
+    "                            }\n",
     "    return dict_preferential_parents_entities\n",
     "\n",
     "\n",
