orphanet_nomenclature_binder

--- a/notebooks/6_distribution_of_Orphanet_RD_by_preferential_parent.ipynb
+++ b/notebooks/6_distribution_of_Orphanet_RD_by_preferential_parent.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe48aa9",
-   "metadata": {"trusted": true,"editable": false,"deletable": false},
+   "id": "cbe48c5f",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -82,14 +82,14 @@
     "    keeping only disorders (with flag 36547)\n",
     "    :param actives_entities:\n",
     "    :return:\n",
-    "    \"\"\"\n
+    "    \"\"\"\n",
     "    disorders = []\n",
-    "    disorders_orphacode = []\n",	
+    "    disorders_orphacode = []\n",
     "    for entity in tqdm(actives_entities):\n",
     "        if entity['DisorderGroup']['@id'] == '36547':\n",
     "            disorders.append(entity)\n",
     "            disorders_orphacode.append(entity['OrphaCode'])\n",
-    "    return disorders\n",
+    "    return disorders, disorders_orphacode\n",
     "\n",
     "\n",
     "def getEntitiesWithPreferentialParent(xml_data, disorders_orphacode):\n",
