orphanet_nomenclature_binder

--- a/notebooks/1_number_of_Orphanet_clinical_entities.ipynb
+++ b/notebooks/1_number_of_Orphanet_clinical_entities.ipynb
@@ -3,19 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8080b6",
-   "metadata": {"trusted": true,"editable": false,"deletable": false},
+   "id": "80d1fe39",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import xmltodict\n",
     "from tqdm import tqdm\n",
-    "from IPython.display import display, HTML\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exportImage(results, outputFile):\n",
+    "    ### pip install -U kaleido\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    col_widths = [max(df[df.columns[0]].astype(str).map(len)) * 2] + \\\n",
+    "                 [max(df[col].astype(str).map(len)) * 10 for col in df.columns[1:]]\n",
+    "    fig = go.Figure(data=[go.Table(\n",
+    "        header=dict(values=list(df.columns),\n",
+    "                    font=dict(size=12, color=\"black\"),\n",
+    "                    fill_color='#b8b8b8',\n",
+    "                    align='center'),\n",
+    "        cells=dict(\n",
+    "            values=[df[col] for col in df.columns],\n",
+    "            fill_color=[['#ececec', '#dcdcdc'] * len(df)],\n",
+    "            align='center',\n",
+    "            font=dict(size=12, color=\"black\")\n",
+    "        ),\n",
+    "        columnwidth=col_widths\n",
+    "    )])\n",
+    "    # Save as image\n",
+    "    fig.write_image(outputFile)  # Requires `kaleido` package\n",
+    "    fig.show()\n",
+    "\n",
     "\n",
     "\n",
     "def runProcess():\n",
     "    \"\"\"\n",
-    "    Main method for number_of_Orphanet_clinical_entities notebook\n",
+    "    Main method for number_of_Orphanet_active_entities notebook\n",
     "    :return: None\n",
     "    \"\"\"\n",
     "    print('--> Computing data ...')\n",
@@ -25,33 +55,47 @@
     "    n_full_entities, actives_entities, inactives_entities = getActivesEntities(xml_data)\n",
     "\n",
     "    ## Count nomenclature metrics\n",
-    "    dict_results_actives, dict_results_inactives, dict_results_groups, dict_results_disorders, dict_results_subtypes = countEntities(\n",
-    "        n_full_entities, inactives_entities, actives_entities)\n",
+    "    dict_results_actives, \\\n",
+    "    dict_results_inactives, \\\n",
+    "    dict_results_groups, \\\n",
+    "    dict_results_disorders, \\\n",
+    "    dict_results_subtypes = countEntities(n_full_entities,\n",
+    "                                          inactives_entities,\n",
+    "                                          actives_entities\n",
+    "                                          )\n",
     "\n",
     "    ## Outputs\n",
     "    ## open Excel file with different worksheets\n",
+    "    print(\"Generating XLSX output file...\")\n",
     "    with pd.ExcelWriter('../output_tables/1_number_of_Orphanet_clinical_entities.xlsx', engine='xlsxwriter') as writer:\n",
-    "        myDataframe_full = pd.DataFrame(dict_results_actives)\n",
-    "        myDataframe_full.to_excel(writer, index=False, sheet_name='Orphanet active entities')\n",
+    "        myDataframe_full_actives = pd.DataFrame(dict_results_actives)\n",
+    "        myDataframe_full_actives.to_excel(writer, index=False, sheet_name='Orphanet active entities')\n",
     "        ## display table in stdout as HTML table\n",
-    "        display(HTML(myDataframe_full.to_html(index=False)))\n",
+    "        # display(HTML(myDataframe_full_actives.to_html(index=False)))\n",
     "\n",
-    "        myDataframe_full = pd.DataFrame(dict_results_inactives)\n",
-    "        myDataframe_full.to_excel(writer, index=False, sheet_name='Orphanet inactive entities')\n",
-    "        display(HTML(myDataframe_full.to_html(index=False)))\n",
+    "        myDataframe_full_inactives = pd.DataFrame(dict_results_inactives)\n",
+    "        myDataframe_full_inactives.to_excel(writer, index=False, sheet_name='Orphanet inactive entities')\n",
+    "        # display(HTML(myDataframe_full_inactives.to_html(index=False)))\n",
     "\n",
     "        myDataframe_groups = pd.DataFrame(dict_results_groups)\n",
     "        myDataframe_groups.to_excel(writer, index=False, sheet_name='Orphanet active gp of disorders')\n",
-    "        display(HTML(myDataframe_groups.to_html(index=False)))\n",
+    "        # display(HTML(myDataframe_groups.to_html(index=False)))\n",
     "\n",
     "        myDataframe_disorders = pd.DataFrame(dict_results_disorders)\n",
     "        myDataframe_disorders.to_excel(writer, index=False, sheet_name='Orphanet active disorders')\n",
-    "        display(HTML(myDataframe_disorders.to_html(index=False)))\n",
+    "        # display(HTML(myDataframe_disorders.to_html(index=False)))\n",
     "\n",
     "        myDataframe_subtypes = pd.DataFrame(dict_results_subtypes)\n",
     "        myDataframe_subtypes.to_excel(writer, index=False, sheet_name='Orphanet active sb of disorders')\n",
-    "        display(HTML(myDataframe_subtypes.to_html(index=False)))\n",
-    "\n",
+    "        # display(HTML(myDataframe_subtypes.to_html(index=False)))\n",
+    "        ## display table in stdout as HTML table\n",
+    "        ##display(HTML(myDataframe.to_html(index=False)))\n",
+    "    print(\"Generating PNG output file...\")\n",
+    "    exportImage(dict_results_actives, \"../output_images/1_number_of_Orphanet_active_entities.png\")\n",
+    "    exportImage(dict_results_inactives, \"../output_images/1_number_of_Orphanet_inactive_entities.png\")\n",
+    "    exportImage(dict_results_groups, \"../output_images/1_number_of_Orphanet_active_groups_of_disorder.png\")\n",
+    "    exportImage(dict_results_disorders, \"../output_images/1_number_of_Orphanet_active_disorders.png\")\n",
+    "    exportImage(dict_results_subtypes, \"../output_images/1_number_of_Orphanet_active_subtypes_of_disorder.png\")\n",
     "\n",
     "def getData(xmlfile):\n",
     "    \"\"\"\n",
@@ -330,6 +374,8 @@
     "                                  ]\n",
     "\n",
     "    return dict_results_actives, dict_results_inactives, dict_results_groups, dict_results_disorders, dict_results_subtypes\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
