--- a/notebooks/2_production_of_the_Orphanet_RD_terminology_in_english_and_other_languages.ipynb
+++ b/notebooks/2_production_of_the_Orphanet_RD_terminology_in_english_and_other_languages.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043431a7",
-   "metadata":  {"trusted": true,"editable": false,"deletable": false},
+   "id": "564e79e3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import display, HTML\n",
@@ -62,6 +62,34 @@
     "                                 'Mean number of synonyms in Orphanet subtypes of disorders with at least one synonym',\n",
     "                                 'Maximum number of synonyms in Orphanet subtypes of disorders',\n",
     "                               ]\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exportImage(results, outputFile):\n",
+    "    ### pip install -U kaleido\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    col_widths = [max(df[df.columns[0]].astype(str).map(len)) * 2] + \\\n",
+    "                 [max(df[col].astype(str).map(len)) * 10 for col in df.columns[1:]]\n",
+    "    fig = go.Figure(data=[go.Table(\n",
+    "        header=dict(values=list(df.columns),\n",
+    "                    font=dict(size=12, color=\"black\"),\n",
+    "                    fill_color='#b8b8b8',\n",
+    "                    align='center'),\n",
+    "        cells=dict(\n",
+    "            values=[df[col] for col in df.columns],\n",
+    "            fill_color=[['#ececec', '#dcdcdc'] * len(df)],\n",
+    "            align='center',\n",
+    "            font=dict(size=12, color=\"black\")\n",
+    "        ),\n",
+    "        columnwidth=col_widths\n",
+    "    )])\n",
+    "    # Save as image\n",
+    "    fig.write_image(outputFile)  # Requires `kaleido` package\n",
+    "    fig.show()\n",
+    "\n",
     "\n",
     "\n",
     "def runProcess():\n",
@@ -148,14 +176,15 @@
     "        dict_results[language].append(MaxSyns)\n",
     "        del (active_entities)\n",
     "\n",
+    "\n",
     "    ## Outputs\n",
     "    ## open Excel file\n",
     "    with pd.ExcelWriter('../output_tables/2_production_of_the_Orphanet_RD_terminology_in_english_and_other_languages.xlsx', engine='xlsxwriter') as writer:\n",
     "        myDataframe = pd.DataFrame(dict_results)\n",
     "        myDataframe.to_excel(writer, index=False)\n",
     "    ## display table in stdout as HTML table\n",
-    "    display(HTML(myDataframe.to_html(index=False)))\n",
-    "\n",
+    "    # display(HTML(myDataframe.to_html(index=False)))\n",
+    "    exportImage(dict_results, \"../output_images/4_number_of_Orphanet_RD_monoclassified_vs_multiclassified.png\")\n",
     "\n",
     "def getData(xmlfile):\n",
     "    \"\"\"\n",
