--- a/notebooks/3_proportion_of_genetic_versus_non_genetic_Orphanet_RD.ipynb
+++ b/notebooks/3_proportion_of_genetic_versus_non_genetic_Orphanet_RD.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c925ea5",
-   "metadata": {"trusted": true,"editable": false,"deletable": false},
+   "id": "3458196b",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import collections\n",
@@ -12,6 +12,8 @@
     "import xmltodict\n",
     "from tqdm import tqdm\n",
     "from IPython.display import display, HTML\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
     "\n",
     "## labels of genetic rows metrics\n",
     "list_entries_genetic_table = ['Orphanet active clinical entities',\n",
@@ -19,6 +21,34 @@
     "                              'Orphanet genetic RD',\n",
     "                              '%'\n",
     "                              ]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exportImage(results, outputFile):\n",
+    "    ### pip install -U kaleido\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    col_widths = [max(df[df.columns[0]].astype(str).map(len))] + \\\n",
+    "                 [max(df[col].astype(str).map(len)) * 3 for col in df.columns[1:]]\n",
+    "    fig = go.Figure(data=[go.Table(\n",
+    "        header=dict(values=list(df.columns),\n",
+    "                    font=dict(size=12, color=\"black\"),\n",
+    "                    fill_color='#b8b8b8',\n",
+    "                    align='center'),\n",
+    "        cells=dict(\n",
+    "            values=[df[col] for col in df.columns],\n",
+    "            fill_color=[['#ececec', '#dcdcdc'] * len(df)],\n",
+    "            align='center',\n",
+    "            font=dict(size=12, color=\"black\")\n",
+    "        ),\n",
+    "        columnwidth=col_widths\n",
+    "    )])\n",
+    "    # Save as image\n",
+    "    fig.write_image(outputFile)  # Requires `kaleido` package\n",
+    "    fig.show()\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def runProcess():\n",
@@ -60,8 +90,9 @@
     "        myDataframe = pd.DataFrame(dict_results)\n",
     "        myDataframe.to_excel(writer, index=False)\n",
     "        ## display table in stdout as HTML table\n",
-    "        display(HTML(myDataframe.to_html(index=False)))\n",
+    "        ##display(HTML(myDataframe.to_html(index=False)))\n",
     "\n",
+    "    exportImage(dict_results, \"../output_images//3_proportion_of_genetic_versus_non_genetic_Orphanet_RD.png\")\n",
     "\n",
     "def getData(xmlfile):\n",
     "    \"\"\"\n",
@@ -184,7 +215,7 @@
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    runProcess()"
+    "    runProcess()\n"
    ]
   }
  ],
