--- a/notebooks/5_distribution_of_Orphanet_RD_in_Orphanet_classifications.ipynb
+++ b/notebooks/5_distribution_of_Orphanet_RD_in_Orphanet_classifications.ipynb
@@ -3,8 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "873cb5cd",
-   "metadata": {"trusted": true,"editable": false,"deletable": false},
+   "id": "e3a9e440",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -14,6 +14,33 @@
     "from IPython.display import display, HTML\n",
     "from tqdm import tqdm\n",
     "from collections import OrderedDict\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exportImage(results, outputFile):\n",
+    "    ### pip install -U kaleido\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    col_widths = [max(df[df.columns[0]].astype(str).map(len)) * 2] + \\\n",
+    "                 [max(df[col].astype(str).map(len)) * 10 for col in df.columns[1:]]\n",
+    "    fig = go.Figure(data=[go.Table(\n",
+    "        header=dict(values=list(df.columns),\n",
+    "                    font=dict(size=12, color=\"black\"),\n",
+    "                    fill_color='#b8b8b8',\n",
+    "                    align='center'),\n",
+    "        cells=dict(\n",
+    "            values=[df[col] for col in df.columns],\n",
+    "            fill_color=[['#ececec', '#dcdcdc'] * len(df)],\n",
+    "            align='center',\n",
+    "            font=dict(size=12, color=\"black\")\n",
+    "        ),\n",
+    "        columnwidth=col_widths\n",
+    "    )])\n",
+    "    # Save as image\n",
+    "    fig.write_image(outputFile)  # Requires `kaleido` package\n",
+    "    fig.show()\n",
     "\n",
     "\n",
     "def runProcess():\n",
@@ -72,8 +99,8 @@
     "        myDataframe = myDataframe.sort_values(by=['Orphanet classification name'], ascending=True)\n",
     "        myDataframe.to_excel(writer, index=False)\n",
     "        ## display table in stdout as HTML table\n",
-    "        display(HTML(myDataframe.to_html(index=False)))\n",
-    "\n",
+    "        # display(HTML(myDataframe.to_html(index=False)))\n",
+    "    exportImage(dict_results, \"../output_images/5_distribution_of_Orphanet_RD_in_Orphanet_classifications.png\")\n",
     "\n",
     "\n",
     "def getData(xmlfile):\n",
