--- a/notebooks/6_distribution_of_Orphanet_RD_by_preferential_parent.ipynb
+++ b/notebooks/6_distribution_of_Orphanet_RD_by_preferential_parent.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbe48c5f",
+   "id": "dadf0cce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,33 @@
     "import xmltodict\n",
     "from tqdm import tqdm\n",
     "from IPython.display import display, HTML\n",
+    "\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "\n",
+    "\n",
+    "def exportImage(results, outputFile):\n",
+    "    ### pip install -U kaleido\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    col_widths = [max(df[df.columns[0]].astype(str).map(len)) * 2] + \\\n",
+    "                 [max(df[col].astype(str).map(len)) * 10 for col in df.columns[1:]]\n",
+    "    fig = go.Figure(data=[go.Table(\n",
+    "        header=dict(values=list(df.columns),\n",
+    "                    font=dict(size=12, color=\"black\"),\n",
+    "                    fill_color='#b8b8b8',\n",
+    "                    align='center'),\n",
+    "        cells=dict(\n",
+    "            values=[df[col] for col in df.columns],\n",
+    "            fill_color=[['#ececec', '#dcdcdc'] * len(df)],\n",
+    "            align='center',\n",
+    "            font=dict(size=12, color=\"black\")\n",
+    "        ),\n",
+    "        columnwidth=col_widths\n",
+    "    )])\n",
+    "    # Save as image\n",
+    "    fig.write_image(outputFile)  # Requires `kaleido` package\n",
+    "    fig.show()\n",
     "\n",
     "def runProcess():\n",
     "    \"\"\"\n",
@@ -37,14 +64,16 @@
     "\n",
     "    ## Outputs\n",
     "    ## open Excel file\n",
+    "    print(\"Generating XLSX output file...\")\n",
     "    with pd.ExcelWriter('../output_tables/6_distribution_of_Orphanet_RD_by_preferential_parent.xlsx',\n",
     "                        engine='xlsxwriter') as writer:\n",
     "        myDataframe = pd.DataFrame(dict_results)\n",
     "        myDataframe = myDataframe.sort_values(by=['Orphanet classification name'], ascending=True)\n",
     "        myDataframe.to_excel(writer, index=False)\n",
     "    ## display table in stdout as HTML table\n",
-    "    display(HTML(myDataframe.to_html(index=False)))\n",
-    "\n",
+    "    # display(HTML(myDataframe.to_html(index=False)))\n",
+    "    print(\"Generating PNG output files...\")\n",
+    "    exportImage(dict_results , '../output_images/6_distribution_of_Orphanet_RD_by_preferential_parent.png')\n",
     "\n",
     "def getData(xmlfile):\n",
     "    \"\"\"\n",
