--- a/notebooks/7_alignment_between_Orphanet_RD_and_international_terminologies.ipynb
+++ b/notebooks/7_alignment_between_Orphanet_RD_and_international_terminologies.ipynb
@@ -3,15 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca3972d",
-   "metadata": {"trusted": true,"editable": false,"deletable": false},
+   "id": "1b00d91c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import xmltodict\n",
     "from tqdm import tqdm\n",
     "from IPython.display import display, HTML\n",
+    "import plotly.graph_objects as go\n",
     "\n",
+    "\n",
+    "\n",
+    "def exportImage(results, outputFile):\n",
+    "    ### pip install -U kaleido\n",
+    "\n",
+    "    df = pd.DataFrame(results)\n",
+    "    col_widths = [max(df[df.columns[0]].astype(str).map(len)) * 2] + \\\n",
+    "                 [max(df[col].astype(str).map(len)) * 10 for col in df.columns[1:]]\n",
+    "    fig = go.Figure(data=[go.Table(\n",
+    "        header=dict(values=list(df.columns),\n",
+    "                    font=dict(size=12, color=\"black\"),\n",
+    "                    fill_color='#b8b8b8',\n",
+    "                    align='center'),\n",
+    "        cells=dict(\n",
+    "            values=[df[col] for col in df.columns],\n",
+    "            fill_color=[['#ececec', '#dcdcdc'] * len(df)],\n",
+    "            align='center',\n",
+    "            font=dict(size=12, color=\"black\")\n",
+    "        ),\n",
+    "        columnwidth=col_widths\n",
+    "    )])\n",
+    "    # Save as image\n",
+    "    fig.write_image(outputFile)  # Requires `kaleido` package\n",
+    "    fig.show()\n",
     "\n",
     "def runProcess():\n",
     "    \"\"\"\n",
@@ -81,11 +106,14 @@
     "\n",
     "    ## Outputs\n",
     "    ## open Excel file\n",
+    "    print(\"Generating XLSX output file...\")\n",
     "    with pd.ExcelWriter('../output_tables/7_alignment_between_Orphanet_RD_and_international_terminologies.xlsx', engine='xlsxwriter') as writer:\n",
     "        myDataframe = pd.DataFrame(dict_results)\n",
     "        myDataframe.to_excel(writer,index=False)\n",
     "        ## display table in stdout as HTML table\n",
-    "        display(HTML(myDataframe.to_html(index=False)))\n",
+    "        # display(HTML(myDataframe.to_html(index=False)))\n",
+    "    print(\"Generating PNG output file...\")\n",
+    "    exportImage(dict_results , '../output_images/7_alignment_between_Orphanet_RD_and_international_terminologies.png')\n",
     "\n",
     "def getData(xmlfile):\n",
     "    \"\"\"\n",
@@ -208,7 +236,7 @@
     "            n_disorders_non_aligned += 1\n",
     "        else:\n",
     "            pass\n",
-    "        \n",
+    "\n",
     "    ## calculate percents\n",
     "    percent_disorders_non_aligned = str(round(((n_disorders_non_aligned * 100) / len(disorders)), 2))\n",
     "    percent_disorders_ICD_OMIM_aligned = str(round(((n_disorders_ICD_OMIM_aligned*100)/len(disorders)),2))\n",
