orphanet_nomenclature_binder july 2025

--- a/notebooks/1_number_of_Orphanet_clinical_entities.ipynb
+++ b/notebooks/1_number_of_Orphanet_clinical_entities.ipynb
@@ -103,7 +103,7 @@
     "    :param: xmlfile\n",
     "    :return: xml_dict (xml parsed as dict)\n",
     "    \"\"\"\n",
-    "    with open(xmlfile, \"r\", encoding='ISO-8859-1') as ini:\n",
+    "    with open(xmlfile, \"r\", encoding='UTF-8') as ini:\n",
     "        xml_dict = xmltodict.parse(ini.read())\n",
     "    return xml_dict\n",
     "\n",
