--- a/notebooks/3_proportion_of_genetic_versus_non_genetic_Orphanet_RD.ipynb
+++ b/notebooks/3_proportion_of_genetic_versus_non_genetic_Orphanet_RD.ipynb
@@ -99,7 +99,7 @@
     "    Read an xml return a dict with xmltodict package\n",
     "    :return: xml parsed as dict\n",
     "    \"\"\"\n",
-    "    with open(xmlfile, \"r\", encoding='ISO-8859-1') as ini:\n",
+    "    with open(xmlfile, \"r\", encoding='UTF-8') as ini:\n",
     "        xml_dict = xmltodict.parse(ini.read())\n",
     "    return xml_dict\n",
     "\n",
